fixed dropdown menu on web. working on mobile menu still not working

--- a/Portfolio/PortStyle.css
+++ b/Portfolio/PortStyle.css
@@ -5,77 +5,6 @@ html {
     background-repeat: no-repeat;
 }
 
-/*mobile devices*/
-@media screen and (max-width: 600px) {
-    html {
-        background-size: 110%;
-    }
-
-    .wrapper {
-        display: flex;
-        flex-direction: column;
-        max-width: 400px;
-    }
-
-    /*https://www.w3schools.com/howto/howto_css_menu_icon.asp*/
-    .hamburger {
-        display: flex;
-        order: 1;
-        width: 25px;
-        height: 5px;
-        background-color: white;
-        margin: 4px;
-        transition: .8s;
-    }
-
-    .change [role="Navigation"] {
-        display: flex;
-    }
-
-    .change .hamburger:nth-child(1) {
-        -webkit-transform: rotate(-45deg);
-        transform:rotate(-45deg) translate(-5px, 8px);
-    }
-    
-    .change .hamburger:nth-child(2) {
-        opacity: 0;
-    }
-    
-    .change .hamburger:nth-child(3) {
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg) translate(-5px, -8px);
-    }
-
-    button {
-        display: none;
-    }
-
-    h1 {
-        order: 1;
-        align-self: flex-start;
-        color: white;
-        font-family: 'Lato', sans-serif;
-        font-size: 70px;
-        margin-left: 40px;
-    }
-
-    h2 {
-        order: 3;
-        font-size: 50px;
-        align-self: flex-end;
-        flex-shrink: 1;
-        text-align: center;
-        color: #c4285b;
-        font-family: 'Montserrat', sans-serif;
-        margin-top: 100px;
-        margin-right: 10%;
-    }
-
-    [role="navigation"] {
-        display: none;
-    }
-}
-
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -92,26 +21,7 @@ button, button a {
 }
 
 button a {
-    padding: 5px 0px 5px 10px;
-}
-
-.navigation {
-    order: 2;
-    margin-left: 40px;
-}
-
-.dropdown-content {
-    display: none;
-    z-index: 1;
-    opacity: 0;
-    margin: 10px 15px 5px 15px;
-    font-size: 15px;
-    font-family: 'Montserrat', sans-serif;
-    color: white;
-}
-
-.show {
-    display: flex;
+    padding: 0px 10px 0px 10px;
 }
 
 svg {
@@ -140,5 +50,130 @@ h2 {
     margin-right: 10%;
 }
 
+/* Dropdown Button */
+.drop {
+    border: none;
+    background-color: transparent;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    border: none;
+    cursor: url(images/beeCU.png), auto;
+}
 
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    order: 2;
+    margin-top: 10px;
+    margin-left: 40px;
+    flex-wrap: wrap; 
+    position: relative;
+}
 
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+    min-width: 160px;
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: #c4285b;
+    transition: .8s;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #c4285b; color: white;}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+/*mobile devices*/
+@media screen and (max-width: 1024px) {
+    html {
+        background-size: 120%;
+    }
+
+    .bee {
+        display: none;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        max-width: 400px;
+    }
+
+    /*https://www.w3schools.com/howto/howto_css_menu_icon.asp*/
+    .hamburger {
+        display: block;
+        order: 1;
+        width: 25px;
+        height: 5px;
+        background-color: white;
+        margin: 4px;
+        transition: .8s;
+    }
+
+    .change [role="Navigation"] {
+        display: flex;
+    }
+
+    .change .hamburger:nth-child(1) {
+        -webkit-transform: rotate(-45deg);
+        transform:rotate(-45deg) translate(-5px, 8px);
+    }
+    
+    .change .hamburger:nth-child(2) {
+        opacity: 0;
+    }
+    
+    .change .hamburger:nth-child(3) {
+        -webkit-transform: rotate(45deg);
+        transform: rotate(45deg) translate(-5px, -8px);
+    }
+
+    .dropdown {
+        display: none;
+    }
+
+    .dropdown a {
+        color: white;
+        background-color: #c4285b;
+        text-decoration: none;
+        font-size: 15px;
+        display: block;
+    }
+
+    h1 {
+        order: 1;
+        align-self: flex-start;
+        color: white;
+        font-family: 'Lato', sans-serif;
+        font-size: 40px;
+        margin-left: 30px;
+    }
+
+    h2 {
+        order: 3;
+        font-size: 30px;
+        align-self: flex-end;
+        flex-grow: inherit;
+        text-align: center;
+        color: #c4285b;
+        font-family: 'Montserrat', sans-serif;
+        margin-top: 100px;
+        margin-right: 10%;
+        margin-left: 10%;
+    }
+}
